# op_research

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
0_coursera_class_exercises/: Coursera-OpResearch1-Exercises.ipynb
1_graphs/: 1_minimum_path_dijkstra.ipynb  2_graph_applications_exercises.ipynb  classes_and_functions.py  test_dijkstra.py  tests.ipynb
2_discrete_optmization/: 1_knapsack_dynamic_programming.py  2_branch_&_bound.py  3_cutting_stock.ipynb  cutting_stock_col_gen.py  knapsack.py
src/0_coursera_class_exercises/: Coursera-OpResearch1-Exercises.ipynb
src/discrete_optimization/: 3_constraint_programming  3_cutting_stock.ipynb  cutting_stock_col_gen.py  cutting_stock_mip_all.py  knapsack_dynamic_programming.py
src/graphs/: 1_minimum_path_dijkstra.ipynb  2_graph_applications_exercises.ipynb  classes_and_functions.py  test_dijkstra.py  tests.ipynb
tests/: test_cutting_stock.py
