[tool.poetry]
package-mode = false
name = "op-research"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
ortools = "^9.15.6755"
numpy = "^2.4.6"
graphviz = "^0.21"
pulp = "^3.3.2"
cvxpy = "^1.9.1"
matplotlib = "^3.10.9"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.15"
pre-commit = "^4.6.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
